--- a/asddotnetcore/Properties/launchSettings.json
+++ b/asddotnetcore/Properties/launchSettings.json
@@ -5,26 +5,27 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:49775",
-      "sslPort": 44388
+      "sslPort": 0
     }
   },
-  "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": false,
-      "launchUrl": "api/projects",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "asddotnetcore": {
-        "commandName": "Project",
-        "launchBrowser": false,
-        "launchUrl": "api/projects",
-        "applicationUrl": "https://localhost:5001;http://localhost:5000",
-        "environmentVariables": {
-            "ASPNETCORE_ENVIRONMENT": "Development"
+    "profiles": {
+        "asddotnetcore": {
+            "commandName": "Project",
+            "launchBrowser": false,
+            "launchUrl": "api/projects",
+            "applicationUrl": "https://localhost:5001;http://localhost:5000",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Production"
+                //"DATABASE_URL": "User ID = postgres;Server=localhost;Port=5432;Database=portfoliodb;Integrated Security=true;Pooling=true;"
+            }
+        },
+        "IIS Express": {
+            "commandName": "IISExpress",
+            "launchBrowser": false,
+            "launchUrl": "api/projects",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
         }
     }
-  }
 }
