--- a/asddotnetcore/asddotnetcore.csproj
+++ b/asddotnetcore/asddotnetcore.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
